//
//  UIElementsIdentifiers.swift
//  ImageFeed
//
//  Created by Denis on 20.09.2024.
//

import Foundation

enum UIElementsIdentifiers {
	static let loginButton: String = "Authenticate"
	static let webView: String = "UnsplashWebView"
	static let webViewLoginButton: String = "Login"
	static let likeButtonOn: String = "Turn on like"
	static let likeButtonOff: String = "Turn off like"
	static let backButton: String = "Back"
	static let logoutButton: String = "Logout"
	static let logoutTitle: String = "Пока, пока!"
	static let yesButton: String = "Да"
	static let infoLabel: String = "InfoLabel"
	static let profileImage: String = "ProfileImage"
}
